[new] ejercicio01 ud7

--- a/Unidad06/Ejercicio01_02/Views/Productos/ListadoProductos.cshtml
+++ b/Unidad06/Ejercicio01_02/Views/Productos/ListadoProductos.cshtml
@@ -4,12 +4,12 @@
 
 <div>
     <ul>
-        <li>Elemento 1</li>
-        <li>Elemento 1</li>
-        <li>Elemento 1</li>
-        <li>Elemento 1</li>
-        <li>Elemento 1</li>
-        <li>Elemento 1</li>
+        <li>Pokemon Rojo</li>
+        <li>Pokemon Cristal</li>
+        <li>Pokemon Esmeralda</li>
+        <li>Pokemon Perla</li>
+        <li>Pokemon Blanco</li>
+        <li>Pokemon Negro 2</li>
     </ul>
     @Html.ActionLink("Ir a Home", "Index", "Home")
 </div>
