--- a/Unidad07/Ejercicio01/Views/Home/Index.cshtml
+++ b/Unidad07/Ejercicio01/Views/Home/Index.cshtml
@@ -4,4 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">@ViewBag.Mensaje</h1>
+    <p>Ahora son las @ViewBag.Hora:@ViewBag.Minute</p>
 </div>
