--- a/Ud08/EjercicioMandaloriano/EjercicioMandalorianoUI/Views/Home/Index.cshtml
+++ b/Ud08/EjercicioMandaloriano/EjercicioMandalorianoUI/Views/Home/Index.cshtml
@@ -1,8 +1,68 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Misiones";
+    @model EjercicioMandalorianoUI.Models.ViewModels.VerMisionesVM
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+<style>
+    form {
+        background: rgba(0, 0, 0, 0.6);
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+        width: 500px;
+        display: flex;
+        flex-direction: column;
+    }
+    select{
+        padding: 5px;
+        text-align: center;
+        font-family: Chakra Petch;
+    }
+    p{
+        font-family: Chakra Petch;
+    }
+    input{
+        font-family: Chakra Petch;
+    }
+</style>
+
+<body style="background-color: #eaeaea;">
+@if (Model.listadoMisiones == null)
+{
+    <h1 style="font-family: 'Press Start 2P'; text-align: center;">Página cerrada hasta las 08:00</h1>
+    <h3 style="font-family: 'Press Start 2P'; text-align: center;">Gracias por usar nuestra web</h3>
+    <p style="font-family: 'Press Start 2P'; text-align: center;">Hora actual:@TimeOnly.FromDateTime(DateTime.Now)</p>
+}
+else
+{
+
+    <h1 style="font-family: 'Press Start 2P'; text-align: center;">LISTADO DE MISIONES</h1>
+    <div style="display: flex; justify-content: center; align-items: center; height:200px">
+        <form method="post">
+            <select id="misiones" name="idMision">
+                @foreach (var mision in Model.listadoMisiones)
+                {
+                    <option value="@mision.Id">@mision.Nombre</option>
+                }
+            </select>
+            <input type="submit" value="Detalles"/>
+        </form>
+    </div>  
+    if(Model.misionSeleccionada != null)
+    {
+        <div style="display: flex; flex-direction: column; border:1px solid black;
+                    width: 700px; margin: 0 auto; padding: 20px;">
+            <h2 style="font-family: 'Press Start 2P'">@Model.misionSeleccionada.Nombre</h2>
+            <h4 style="font-family: 'Press Start 2P'">@Model.misionSeleccionada.Recompensa Créditos</h4>
+            <p>@Model.misionSeleccionada.Descripcion</p>
+            <input type="submit" value="Aceptar misión"
+                   style="align-self: end;" width="200" />
+        </div>
+    }
+    
+}
+</body>
