[upd] hora mejor

--- a/Ud08/EjercicioMandaloriano/EjercicioMandalorianoUI/Views/Home/Index.cshtml
+++ b/Ud08/EjercicioMandaloriano/EjercicioMandalorianoUI/Views/Home/Index.cshtml
@@ -104,6 +104,6 @@
     
 }
     <div class="hora-actual">
-        @TimeOnly.FromDateTime(DateTime.Now)
+        @DateTime.Now.ToString("HH:mm")
     </div>
 </body>
