--- a/Ud08/EjercicioMandaloriano/EjercicioMandalorianoUI/Views/Home/Index.cshtml
+++ b/Ud08/EjercicioMandaloriano/EjercicioMandalorianoUI/Views/Home/Index.cshtml
@@ -22,25 +22,11 @@
         text-align: center;
         font-family: Chakra Petch;
     }
-    h1{
+    h1, h2, h3 , h4{
         font-family: 'Press Start 2P';
         color: #fffbd9
     }
 
-    h2 {
-        font-family: 'Press Start 2P';
-        color: #fffbd9
-    }
-
-    h3 {
-        font-family: 'Press Start 2P';
-        color: #fffbd9
-    }
-
-    h4 {
-        font-family: 'Press Start 2P';
-        color: #fffbd9
-    }
     p{
         font-family: Chakra Petch;
         color: #fffbd9
@@ -72,7 +58,7 @@
         <div style="display: flex; justify-content: center; align-items: center; height:200px">
             <form method="post">
                 <select id="misiones" name="idMision">
-                    <option value="" disabled selected>
+                    <option value="" disbled selected>
                         @if (Model.misionSeleccionada != null) 
                         { 
                             @Model.misionSeleccionada.Nombre 
