--- a/Ud10/Unidad10SGE/Ejercicio01/Views/Home/Index.cshtml
+++ b/Ud10/Unidad10SGE/Ejercicio01/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <form method="post" action="@Url.Action("aa", "Home")">
+    <form method="post" action="@Url.Action("ConectarBD", "Home")">
         <input type="submit" name="estado" value="Conectar"/>
     </form>
 
