[udp] details ej02 y practicas

--- a/Practicas/PracticaExamen1/PracticaUI/Views/Home/Index.cshtml
+++ b/Practicas/PracticaExamen1/PracticaUI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Entidades.clsPersona>
+﻿@model IEnumerable<Entidades.ClsPersona>
 
 @{
     ViewData["Title"] = "Index";
@@ -22,19 +22,10 @@
                 @Html.DisplayNameFor(model => model.Apellidos)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Telefono)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Direccion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Foto)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.FechaNacimiento)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IDDepartamento)
+                @Html.DisplayNameFor(model => model.IdDepartamento)
             </th>
             <th></th>
         </tr>
@@ -52,23 +43,14 @@
                 @Html.DisplayFor(modelItem => item.Apellidos)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Telefono)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Direccion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Foto)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IDDepartamento)
+                @Html.DisplayFor(modelItem => item.IdDepartamento)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
