--- a/Ud10/Unidad10SGE/Ejercicio02ListadoBDASP/Views/Persona/Details.cshtml
+++ b/Ud10/Unidad10SGE/Ejercicio02ListadoBDASP/Views/Persona/Details.cshtml
@@ -62,5 +62,5 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index", asp-controller="Home">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
