--- a/Examenes/ExamenJavaScript/ExamenPabloCarbonero/ExamenAsp/Views/Home/Index.cshtml
+++ b/Examenes/ExamenJavaScript/ExamenPabloCarbonero/ExamenAsp/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <a href="pages/Index.html">aaa</a>
+    <a href="/pages/index.html">Ir a Index</a>
 </div>
