--- a/Unidad16/AngularApi/personaApi/src/app/components/tabla-personas/tabla-personas.component.html
+++ b/Unidad16/AngularApi/personaApi/src/app/components/tabla-personas/tabla-personas.component.html
@@ -37,6 +37,11 @@
         <th mat-header-cell *matHeaderCellDef> Fecha de nacimiento </th>
         <td mat-cell *matCellDef="let persona"> {{persona.fechaNacimiento | date: "dd/MM/YYYY"}} </td>
     </ng-container>
+
+    <ng-container matColumnDef=" ">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let persona"><button mat-raised-button (click)="deletePersona(persona.id)">Borrar</button> </td>
+    </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
