--- a/Unidad16/AngularApi/personaApi/src/app/components/tabla-personas/tabla-personas.component.scss
+++ b/Unidad16/AngularApi/personaApi/src/app/components/tabla-personas/tabla-personas.component.scss
@@ -1,7 +1,10 @@
 @use '@angular/material' as mat;
-// Customize the entire app. Change :root to your selector if you want to scope the styles.
-:root {
+
+table{
   @include mat.table-overrides((
-    background-color: orange
+    background-color: rgb(250, 215, 255),
+    header-headline-color: rgb(34, 0, 10),
+    header-headline-weight: bold,
+    row-item-label-text-color: rgb(37, 0, 12),
   ));
 }
