--- a/Unidad16/AngularApi/personaApi/src/styles.scss
+++ b/Unidad16/AngularApi/personaApi/src/styles.scss
@@ -1,13 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @use '@angular/material' as mat;
 
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+/*.mat-table-overrides{
+  background-color: orange;
+}*/
 
-// Customize the entire app. Change :root to your selector if you want to scope the styles.
-:root {
-  @include mat.table-overrides((
-    background-color: pink
-  ));
-}
+
