[upd] crear y actualizar

--- a/Unidad16/AngularApi/personaApi/src/app/app.component.html
+++ b/Unidad16/AngularApi/personaApi/src/app/app.component.html
@@ -1,5 +1,5 @@
 <p>Hola?</p>
 
-<a href="/tablapersonas">Personas</a>
+<a routerLink="/tablapersonas" routerLinkActive="active">Personas</a>
 
 <router-outlet />
