--- a/Unidad16/AngularApi/personaApi/src/app/components/dialog-editar/dialog-editar.component.html
+++ b/Unidad16/AngularApi/personaApi/src/app/components/dialog-editar/dialog-editar.component.html
@@ -2,37 +2,37 @@
 
 <div mat-dialog-content>
   <form #personaForm="ngForm">
-    <mat-form-field class="full-width">
+    <mat-form-field>
       <mat-label>Nombre</mat-label>
       <input matInput [(ngModel)]="persona.nombre" name="nombre" required>
     </mat-form-field>
 
-    <mat-form-field class="full-width">
+    <mat-form-field>
       <mat-label>Apellidos</mat-label>
       <input matInput [(ngModel)]="persona.apellidos" name="apellidos" required>
     </mat-form-field>
 
-    <mat-form-field class="full-width">
+    <mat-form-field>
       <mat-label>Teléfono</mat-label>
       <input matInput [(ngModel)]="persona.telefono" name="telefono">
     </mat-form-field>
 
-    <mat-form-field class="full-width">
+    <mat-form-field>
       <mat-label>Dirección</mat-label>
       <input matInput [(ngModel)]="persona.direccion" name="direccion">
     </mat-form-field>
 
-    <mat-form-field class="full-width">
+    <mat-form-field>
       <mat-label>Foto (URL)</mat-label>
       <input matInput [(ngModel)]="persona.foto" name="foto">
     </mat-form-field>
 
-    <mat-form-field class="full-width">
+    <mat-form-field>
       <mat-label>Fecha de Nacimiento</mat-label>
       <input matInput [(ngModel)]="persona.fechaNacimiento" name="fechaNacimiento" type="date">
     </mat-form-field>
 
-    <mat-form-field class="full-width">
+    <mat-form-field>
       <mat-label>ID Departamento</mat-label>
       <input matInput [(ngModel)]="persona.idDepartamento" name="idDepartamento" type="number">
     </mat-form-field>
@@ -41,6 +41,6 @@
 
 <div mat-dialog-actions align="end">
   <button mat-button (click)="dialog.close()">Cancelar</button>
-  <button mat-raised-button color="primary" (click)="guardarPersona()">Guardar</button>
+  <button mat-raised-button (click)="guardarPersona()">Guardar</button>
 </div>
 
