--- a/Unidad16/AngularApi/personaApi/src/app/components/tabla-personas/tabla-personas.component.html
+++ b/Unidad16/AngularApi/personaApi/src/app/components/tabla-personas/tabla-personas.component.html
@@ -41,13 +41,13 @@
     <ng-container matColumnDef=" ">
         <th mat-header-cell *matHeaderCellDef>  </th>
         <td mat-cell *matCellDef="let persona">
-            <button mat-raised-button (click)="deletePersona(persona.id)">Borrar</button> 
-            <button mat-raised-button (click)="abrirEditarPersona(persona)">Editar</button>
+            <button mat-raised-button (click)="deletePersona(persona.id); $event.stopPropagation()">Borrar</button> 
+            <button mat-raised-button (click)="abrirEditarPersona(persona); $event.stopPropagation()">Editar</button>
         </td>
 
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let persona; columns: displayedColumns;" (click)="abrirDetallesPersona(persona.id)" id="row"></tr>
 
   </table>
