--- a/Unidad16/AngularApi/personaApi/src/app/components/tabla-personas/tabla-personas.component.scss
+++ b/Unidad16/AngularApi/personaApi/src/app/components/tabla-personas/tabla-personas.component.scss
@@ -8,3 +8,10 @@ table{
     row-item-label-text-color: rgb(37, 0, 12),
   ));
 }
+
+#row {
+  cursor: pointer;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+}
